# Visual-Slam-Algorithms

./: README.md
ch1/: Report_MagicTZ.docx
ch1/code/: CMakeLists.txt
ch1/code/lib/: CMakeLists.txt
ch1/src/: myslam.cpp
ch2/: Report_MagicTZ.docx
ch2/src/: CMakeLists.txt  coordinateTransform.cpp  eigenMatrix.cpp  useGeometry.cpp
ch3-trajectory/code/: CMakeLists.txt
ch3-trajectory/src/: draw_trajectory.cpp
ch4-disparity,camera_model,GN/: Report_MagicTZ.docx
ch4-disparity,camera_model,GN)/code/: CMakeLists.txt
ch4-disparity,camera_model,GN)/code/gaussnewton/: CMakeLists.txt
ch4-disparity,camera_model,GN)/src/disparity/: CMakeLists.txt
ch4-disparity,camera_model,GN)/src/undistorted/: CMakeLists.txt  undistort_image.cpp
ch4-disparity,camera_model,GN/src/disparity/: disparity.cpp
ch4-disparity,camera_model,GN/src/gaussnewton/: gaussnewton.cpp
ch4-disparity,camera_model,GN/src/undistorted/: undistort_image.cpp
ch5-VO(Keypoints)/: Report_MagicTZ.docx
ch5-VO(Keypoints)/code/: CMakeLists.txt  GN-BA.cpp  computeORB.cpp
ch5-VO(Keypoints)/src/: .clang-format  E2Rt.cpp  ICP.cpp
ch6-VO(direct_and_optical_flow)/code/: draw_pointcloud.h  optical_flow.cpp
ch6-VO(direct_and_optical_flow)/src/: CMakeLists.txt  direct_method.cpp
ch7-BackEnd/: MagicTZ_Report.docx  README.md
ch7-BackEnd/code/: CMakeLists.txt  directBA.cpp  rotation.h
ch7-BackEnd/src/: BAL.cpp  BAL.h  CMakeLists.txt  MyBA.cpp  MyBA.h  directBA.cpp  g2oBA.cpp
ch7-BackEnd/src/ply文件/: final.ply  initial.ply
ch9-SlamSystem/: bundle_adjustment.cc
ch9-SlamSystem/src/: BAL.cpp  BAL.h  CMakeLists.txt  MyBA.cpp  MyBA.h  common.cpp  common.h  main.cpp
